MDEV-7824 [Bug #68041] Zero date can be inserted in strict no-zero mode through a default value